added meta tags

--- a/art/index.html
+++ b/art/index.html
@@ -10,6 +10,7 @@
 
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
+	<meta name="description" content="Commission custom airplane paintings and portraits from Damon Welber, a Daytona Beach flight instructor and artist. Digital and canvas art available for just $20. View more on Instagram and order today.">
 
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
