--- a/randomplanes/index.html
+++ b/randomplanes/index.html
@@ -10,6 +10,7 @@
 
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
+	<meta name="description" content="Discover real-world aircraft with the Random Plane Generator! Instantly explore planes from all eras, complete with images and facts. A fun tool for aviation enthusiasts, students, and pilots alike.">
 
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -118,7 +119,7 @@
 		</div>
 	</header>
 	<div id="content">
-		<picture>
+		<picture alt="Random Plane Generator" title="Generate a random, real world plane from any era.">
 			<source media="(min-width: 450px)" srcset="./banner.png">
 			<source media="(max-width: 450px)" srcset="./banner_small.png">
 			<img src="./banner.png" class="banner-small">
