added canonical link to contact

--- a/contact/index.html
+++ b/contact/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<title>Fly with Damon | Contact</title>
+	<link rel="canonical" href="/booking"/>
 	<link rel="icon" type="image/ico" href="/favicon.ico">
 	<link rel="stylesheet" href="/reset.css">
 	<link rel="stylesheet" href="/hamburgers.css">
