--- a/contact/index.html
+++ b/contact/index.html
@@ -59,7 +59,7 @@
 						<br><br>
 						Don't hesitate to reach out over text as this is my preferred method of communication.
 						<br><br>
-						Я говорю́ по-ру́сски.
+						Я говорю по-русски.
 					</p>
 				</div>
 				<span class="half-line-break"></span>
