fixed description tags, replaces plane.js

--- a/art/index.html
+++ b/art/index.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="/overrides.css">
 
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Commission custom airplane paintings and portraits from Damon Welber, a Daytona Beach flight instructor and artist. Digital and canvas art available for just $20. View more on Instagram and order today.">
 
 	<link rel="preconnect" href="https://fonts.googleapis.com">
