--- a/contact/index.html
+++ b/contact/index.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="/overrides.css">
 
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Learn to fly with Damon Welber, an experienced CFI at Air America Flight Center in Daytona Beach. Offering private, commercial, and CFI flight training in aircraft like the Cessna 172, Pipistrel Alpha, and more. Book your flying lessons today!">
 
 	<link rel="preconnect" href="https://fonts.googleapis.com">
