--- a/randomplanes/index.html
+++ b/randomplanes/index.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="/overrides.css">
 
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Discover real-world aircraft with the Random Plane Generator! Instantly explore planes from all eras, complete with images and facts. A fun tool for aviation enthusiasts, students, and pilots alike.">
 
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -149,7 +149,7 @@ Decades are available, e.g. '2010s'">
 	</div>
 	<div style="display: none"><img src="./no_image.png"></div>
 	<script src="/script.js"></script>
-	<script src="./planes.js"></script>
+	<script src="./planes2.js"></script>
 </body>
 
 </html>
