--- a/about/index.html
+++ b/about/index.html
@@ -10,7 +10,8 @@
 
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Learn to fly with Damon Welber, an experienced CFI at Air America Flight Center in Daytona Beach. Offering private, commercial, and CFI flight training in aircraft like the Cessna 172, Pipistrel Alpha, and more. Book your flying lessons today!">
+	<meta name="description"
+		content="Learn to fly with Damon Welber, a CFI at Air America Flight Center in Daytona Beach. Offering private, commercial, and CFI flight training in aircraft like the Cessna 172, Pipistrel Alpha, and more. Book your flying lessons today!">
 
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -88,7 +89,7 @@
 					<h1>About Me</h1>
 					<br>
 					<p>
-						I am an independent flight instructor and student at Embry-Riddle, Daytona. When I was first flown up in a Cirrus SR22 and given the opportunity to steer it at a young age, I realized then and there that I wanted to dedicate myself to flying. By the time I was 18, I earned my Private Pilot License at the quaint Greenwood Lake Airport in New Jersey and went on to get my Commercial License a year later.
+						I am an independent flight instructor, student at Embry-Riddle, Daytona, and most recently a seaplane pilot. When I was first flown up in a Cirrus SR22 and given the opportunity to steer it at a young age, I realized then and there that I wanted to dedicate myself to flying. By the time I was 18, I earned my Private Pilot License at the quaint Greenwood Lake Airport in New Jersey and went on to get my Commercial License a year later.
 						<br><br>
 						I enjoy making art, with much of my paintings and illustrations being of birds, B-2s, and other aircraft! I also like to game, watch classic movies, and seek thrills in roller coasters, hang gliding, or even skydiving.
 					</p>
