--- a/art/index.html
+++ b/art/index.html
@@ -10,7 +10,8 @@
 
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Commission custom airplane paintings and portraits from Damon Welber, a Daytona Beach flight instructor and artist. Digital and canvas art available for just $20. View more on Instagram and order today.">
+	<meta name="description"
+		content="Learn to fly with Damon Welber, a CFI at Air America Flight Center in Daytona Beach. Offering private, commercial, and CFI flight training in aircraft like the Cessna 172, Pipistrel Alpha, and more. Book your flying lessons today!">
 
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
