--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Learn to fly with Damon Welber, an experienced CFI at Air America Flight Center in Daytona Beach. Offering private, commercial, and CFI flight training in aircraft like the Cessna 172, Pipistrel Alpha, and more. Book your flying lessons today!">
+	<meta name="description" content="Learn to fly with Damon Welber, a CFI at Air America Flight Center in Daytona Beach. Offering private, commercial, and CFI flight training in aircraft like the Cessna 172, Pipistrel Alpha, and more. Book your flying lessons today!">
 
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -71,7 +71,7 @@
 			<img src="/images/avionics.jpeg" id="avionics" class="article-image" alt="CFI looking at avionics">
 			<div class="bio">
 				<p>
-					I’m an independent flight instructor at Air America Flight Center in Daytona Beach. I can instruct in many different planes, such as the Cessna 172, Pipistrel Alpha, Piper Arrow, and Piper Aztec. I can also instruct you in one of your own!
+					I’m an independent flight instructor at Air America Flight Center in Daytona Beach. I can instruct in many different planes, such as the Cessna 172, Pipistrel Alpha, Piper Arrow, and Piper Aztec. I can also instruct you in one of your own! If you are a student at Embry-Riddle, I understand what your school wants and expects as a student there myself.
 					<br><br>
 					I am currently taking Private, Commercial, and CFI students. Some of what I offer includes <b>Biannual Flight Reviews</b> (BFRs) and <b>Instrument Proficiency Checks</b> (IPCS).
 					<br><br>
